[gd_scene load_steps=32 format=4 uid="uid://dms8d5ry6iy6m"]

[ext_resource type="TileSet" uid="uid://dan6cuo8k8ug7" path="res://Resources/Tilesets/environment.tres" id="1_2lugi"]
[ext_resource type="Script" path="res://Scenes/Stages/main_stage.gd" id="1_f2roh"]
[ext_resource type="PackedScene" uid="uid://d1yiolra5ob08" path="res://Scenes/Plants/soil.tscn" id="2_uejqp"]
[ext_resource type="Texture2D" uid="uid://d0xf1645rmrgn" path="res://Art/indicator.png" id="3_35oe8"]
[ext_resource type="PackedScene" uid="uid://bk3volyh844lb" path="res://Scenes/Player/player.tscn" id="3_wnjs3"]
[ext_resource type="Script" path="res://Scenes/Player/indicator.gd" id="4_4b4ui"]
[ext_resource type="PackedScene" uid="uid://c2t6ag7oofq0c" path="res://Scenes/Critters/creatures_director.tscn" id="4_644cu"]
[ext_resource type="Script" path="res://Scenes/Stages/cam.gd" id="6_5sxdg"]
[ext_resource type="Texture2D" uid="uid://db201ooxrgxpp" path="res://Resources/Atlases/coin.tres" id="8_wjfc8"]
[ext_resource type="Theme" uid="uid://cmfiuoomtn5t6" path="res://Resources/Themes/basic_ui.tres" id="9_sw4d4"]
[ext_resource type="Script" path="res://Scenes/Stages/plants_coins.gd" id="10_hgf3a"]
[ext_resource type="Script" path="res://Scenes/GUI/coin_counter.gd" id="10_qflsh"]
[ext_resource type="Texture2D" uid="uid://c1re7k1aqyn1h" path="res://Art/pickup truck.png" id="12_4o0jh"]
[ext_resource type="Script" path="res://Scenes/Stages/time_counter.gd" id="13_sfrhc"]
[ext_resource type="Texture2D" uid="uid://ugtodcuqecr" path="res://Art/ui.png" id="15_8v17g"]
[ext_resource type="Texture2D" uid="uid://cl0sj4elecnq5" path="res://Art/game over ui.png" id="16_6hcga"]
[ext_resource type="AudioStream" uid="uid://dwmurnghlixna" path="res://Sound/Music/ambience.ogg" id="16_atbnk"]
[ext_resource type="Texture2D" uid="uid://c3gnsf1a54a0s" path="res://Art/Icons.png" id="17_2n5g3"]
[ext_resource type="Texture2D" uid="uid://dytwbfut07wwl" path="res://Art/market stall.png" id="17_eeec2"]
[ext_resource type="Texture2D" uid="uid://d1mktxqj42xi7" path="res://Resources/Atlases/crop.tres" id="18_bg3bw"]
[ext_resource type="Texture2D" uid="uid://c748f7osdfele" path="res://Resources/Atlases/critter.tres" id="19_tw03e"]
[ext_resource type="AudioStream" uid="uid://bl7bqwsrqxplg" path="res://Sound/Music/Mainmusic√µige.ogg" id="20_phf5y"]
[ext_resource type="AudioStream" uid="uid://wiwfvcmtk4t6" path="res://Sound/SFX/Gameoversound.wav" id="21_jlg7n"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3wb3w"]
texture = ExtResource("3_35oe8")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_3oegt"]
sources/0 = SubResource("TileSetAtlasSource_3wb3w")

[sub_resource type="Animation" id="Animation_056bw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-32, -17)]
}

[sub_resource type="Animation" id="Animation_rlf0e"]
resource_name = "default"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(0.554785, 0.55, 1),
"update": 0,
"values": [Vector2(-32, -17), Vector2(-32, -15), Vector2(-32, -17)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kbbtx"]
_data = {
"RESET": SubResource("Animation_056bw"),
"default": SubResource("Animation_rlf0e")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tusv4"]
texture = ExtResource("15_8v17g")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0

[sub_resource type="TileSet" id="TileSet_33p5k"]
sources/0 = SubResource("TileSetAtlasSource_tusv4")

[sub_resource type="AtlasTexture" id="AtlasTexture_re6um"]
atlas = ExtResource("17_2n5g3")
region = Rect2(0, 24, 8, 8)

[node name="MainStage" type="Node2D"]
script = ExtResource("1_f2roh")

[node name="TileMap" type="Node2D" parent="."]

[node name="Greenery" type="TileMapLayer" parent="TileMap"]
modulate = Color(0.904491, 0.957462, 0.97039, 1)
tile_map_data = PackedByteArray("AAD5//T/AAAAAAAAAAD5//X/AAAAAAAAAAD5//b/AAAAAAAAAAD5//f/AAAAAAAAAAD5//j/AAAAAAAAAAD5//n/AAAAAAAAAAD5//r/AAAAAAAAAAD5//v/AAAAAAAAAAD5//z/AAAAAAAAAAD5//3/AAAAAAAAAAD5//7/AAAAAAAAAAD5////AAAAAAAAAAD5/wAAAAAAAAAAAAD5/wEAAAAAAAAAAAD5/wIAAAAAAAAAAAD5/wMAAAAAAAAAAAD5/wQAAAAAAAAAAAD5/wUAAAAAAAAAAAD5/wYAAAAAAAAAAAD5/wcAAAAAAAAAAAD5/wgAAAAAAAAAAAD5/wkAAAAAAAAAAAD5/woAAAAAAAAAAAD5/wsAAAAAAAAAAAD6//T/AAAAAAAAAAD6//X/AAAAAAAAAAD6//b/AAAAAAAAAAD6//f/AAAAAAAAAAD6//j/AAAAAAAAAAD6//n/AAAAAAAAAAD6//r/AAAAAAAAAAD6//v/AAAAAAAAAAD6//z/AAAAAAAAAAD6//3/AAAAAAAAAAD6//7/AAAAAAAAAAD6////AAAAAAAAAAD6/wAAAAAAAAAAAAD6/wEAAAAAAAAAAAD6/wIAAAAAAAAAAAD6/wMAAAAAAAAAAAD6/wQAAAAAAAAAAAD6/wUAAAAAAAAAAAD6/wYAAAAAAAAAAAD6/wcAAAAAAAAAAAD6/wgAAAAAAAAAAAD6/wkAAAAAAAAAAAD6/woAAAAAAAAAAAD6/wsAAAAAAAAAAAD7//T/AAAAAAAAAAD7//X/AAAAAAAAAAD7//b/AAAAAAAAAAD7//f/AAAAAAAAAAD7//j/AAAAAAAAAAD7//n/AAAAAAAAAAD7//r/AAAAAAAAAAD7//v/AAAAAAAAAAD7//z/AAAAAAAAAAD7//3/AAAAAAAAAAD7//7/AAAAAAAAAAD7////AAAAAAAAAAD7/wAAAAAAAAAAAAD7/wEAAAAAAAAAAAD7/wIAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wQAAAAAAAAAAAD7/wUAAAAAAAAAAAD7/wYAAAAAAAAAAAD7/wcAAAAAAAAAAAD7/wgAAAAAAAAAAAD7/wsAAAAAAAAAAAD8//T/AAAAAAAAAAD8//X/AAAAAAAAAAD8//b/AAAAAAAAAAD8//f/AAAAAAAAAAD8//j/AAAAAAAAAAD8//n/AAAAAAAAAAD8//r/AAAAAAAAAAD8//v/AAAAAAAAAAD8//z/AAAAAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD8/wUAAAAAAAAAAAD8/wYAAAAAAAAAAAD8/wcAAAAAAAAAAAD8/wgAAAAAAAAAAAD8/wkAAAAAAAAAAAD8/woAAAAAAAAAAAD8/wsAAAAAAAAAAAD9//T/AAAAAAAAAAD9//X/AAAAAAAAAAD9//b/AAAAAAAAAAD9//f/AAAAAAAAAAD9//j/AAAAAAAAAAD9//n/AAAAAAAAAAD9//r/AAAAAAAAAAD9//v/AAAAAAAAAAD9//z/AAAAAAAAAAD9//3/AAAAAAAAAAD9//7/AAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAAAAAAAAAD9/wMAAAAAAAAAAAD9/wQAAAAAAAAAAAD9/wUAAAAAAAAAAAD9/wYAAAAAAAAAAAD9/wcAAAAAAAAAAAD9/wgAAAAAAAAAAAD9/wkAAAAAAAAAAAD9/woAAAAAAAAAAAD9/wsAAAAAAAAAAAD+//T/AAAAAAAAAAD+//X/AAAAAAAAAAD+//b/AAAAAAAAAAD+//f/AAAAAAAAAAD+//j/AAAAAAAAAAD+//n/AAAAAAAAAAD+//r/AAAAAAAAAAD+//v/AAAAAAAAAAD+//z/AAAAAAAAAAD+//3/AAAAAAAAAAD+//7/AAAAAAAAAAD+////AAAAAAAAAAD+/wAAAAAAAAAAAAD+/wEAAAAAAAAAAAD+/wIAAAAAAAAAAAD+/wMAAAAAAAAAAAD+/wQAAAAAAAAAAAD+/wUAAAAAAAAAAAD+/wYAAAAAAAAAAAD+/wcAAAAAAAAAAAD+/wgAAAAAAAAAAAD+/wkAAAAAAAAAAAD+/woAAAAAAAAAAAD+/wsAAAAAAAAAAAD///T/AAAAAAAAAAD///X/AAAAAAAAAAD///b/AAAAAAAAAAD///f/AAAAAAAAAAD///j/AAAAAAAAAAD///n/AAAAAAAAAAD///r/AAAAAAAAAAD///v/AAAAAAAAAAD///z/AAAAAAAAAAD///3/AAAAAAAAAAD///7/AAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAD//woAAAAAAAAAAAD//wsAAAAAAAAAAAAAAPX/AAAAAAAAAAAAAPb/AAAAAAAAAAAAAPf/AAAAAAAAAAAAAPj/AAAAAAAAAAAAAPn/AAAAAAAAAAAAAPr/AAAAAAAAAAAAAPv/AAAAAAAAAAAAAPz/AAAAAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAABAPX/AAAAAAAAAAABAPb/AAAAAAAAAAABAPf/AAAAAAAAAAABAPj/AAAAAAAAAAABAPn/AAAAAAAAAAABAPr/AAAAAAAAAAABAPv/AAAAAAAAAAABAPz/AAAAAAAAAAABAP3/AAAAAAAAAAABAP7/AAAAAAAAAAABAP//AAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAACAPX/AAAAAAAAAAACAPb/AAAAAAAAAAACAPf/AAAAAAAAAAACAPj/AAAAAAAAAAACAPn/AAAAAAAAAAACAPr/AAAAAAAAAAACAPv/AAAAAAAAAAACAPz/AAAAAAAAAAACAP3/AAAAAAAAAAACAP7/AAAAAAAAAAACAP//AAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAADAPX/AAAAAAAAAAADAPb/AAAAAAAAAAADAPf/AAAAAAAAAAADAPj/AAAAAAAAAAADAPn/AAAAAAAAAAADAPr/AAAAAAAAAAADAPv/AAAAAAAAAAADAPz/AAAAAAAAAAADAP3/AAAAAAAAAAADAP7/AAAAAAAAAAADAP//AAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAAAAAAAAAAEAPX/AAAAAAAAAAAEAPb/AAAAAAAAAAAEAPf/AAAAAAAAAAAEAPj/AAAAAAAAAAAEAPn/AAAAAAAAAAAEAPr/AAAAAAAAAAAEAPv/AAAAAAAAAAAEAPz/AAAAAAAAAAAEAP3/AAAAAAAAAAAEAP7/AAAAAAAAAAAEAP//AAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAEAAsAAAAAAAAAAAAFAPX/AAAAAAAAAAAFAPb/AAAAAAAAAAAFAPf/AAAAAAAAAAAFAPj/AAAAAAAAAAAFAPn/AAAAAAAAAAAFAPr/AAAAAAAAAAAFAPv/AAAAAAAAAAAFAPz/AAAAAAAAAAAFAP3/AAAAAAAAAAAFAP7/AAAAAAAAAAAFAP//AAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAAAAAAGAPT/AAAAAAAAAAAGAPX/AAAAAAAAAAAGAPb/AAAAAAAAAAAGAPf/AAAAAAAAAAAGAPj/AAAAAAAAAAAGAPn/AAAAAAAAAAAGAPr/AAAAAAAAAAAGAPv/AAAAAAAAAAAGAPz/AAAAAAAAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAAAAAAGAP//AAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAAAAAAFAPT/AAAAAAAAAAAEAPT/AAAAAAAAAAADAPT/AAAAAAAAAAACAPT/AAAAAAAAAAAAAPT/AAAAAAAAAAABAPT/AAAAAAAAAAABAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAD//wUAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAYAAAAAAAAAAAABAAUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wQAAAAAAAAAAAD7/wkAAAAAAAAAAAD7/woAAAAAAAAAAAD2//P/AAAAAAAAAAD2//T/AAAAAAAAAAD2//X/AAAAAAAAAAD2//b/AAAAAAAAAAD2//f/AAAAAAAAAAD2//j/AAAAAAAAAAD2//n/AAAAAAAAAAD2//r/AAAAAAAAAAD2//v/AAAAAAAAAAD2//z/AAAAAAAAAAD2//3/AAAAAAAAAAD2//7/AAAAAAAAAAD2////AAAAAAAAAAD2/wAAAAAAAAAAAAD2/wEAAAAAAAAAAAD2/wIAAAAAAAAAAAD2/wMAAAAAAAAAAAD2/wQAAAAAAAAAAAD2/wUAAAAAAAAAAAD2/wYAAAAAAAAAAAD2/wcAAAAAAAAAAAD2/wgAAAAAAAAAAAD2/wkAAAAAAAAAAAD2/woAAAAAAAAAAAD3//P/AAAAAAAAAAD3//T/AAAAAAAAAAD3//X/AAAAAAAAAAD3//b/AAAAAAAAAAD3//f/AAAAAAAAAAD3//j/AAAAAAAAAAD3//n/AAAAAAAAAAD3//r/AAAAAAAAAAD3//v/AAAAAAAAAAD3//z/AAAAAAAAAAD3//3/AAAAAAAAAAD3//7/AAAAAAAAAAD3////AAAAAAAAAAD3/wAAAAAAAAAAAAD3/wEAAAAAAAAAAAD3/wIAAAAAAAAAAAD3/wMAAAAAAAAAAAD3/wQAAAAAAAAAAAD3/wUAAAAAAAAAAAD3/wYAAAAAAAAAAAD3/wcAAAAAAAAAAAD3/wgAAAAAAAAAAAD3/wkAAAAAAAAAAAD3/woAAAAAAAAAAAD4//P/AAAAAAAAAAD4//T/AAAAAAAAAAD4//X/AAAAAAAAAAD4//b/AAAAAAAAAAD4//f/AAAAAAAAAAD4//j/AAAAAAAAAAD4//n/AAAAAAAAAAD4//r/AAAAAAAAAAD4//v/AAAAAAAAAAD4//z/AAAAAAAAAAD4//3/AAAAAAAAAAD4//7/AAAAAAAAAAD4////AAAAAAAAAAD4/wAAAAAAAAAAAAD4/wEAAAAAAAAAAAD4/wIAAAAAAAAAAAD4/wMAAAAAAAAAAAD4/wQAAAAAAAAAAAD4/wUAAAAAAAAAAAD4/wYAAAAAAAAAAAD4/wcAAAAAAAAAAAD4/wgAAAAAAAAAAAD4/wkAAAAAAAAAAAD4/woAAAAAAAAAAAD2/wsAAAAAAAAAAAD2/wwAAAAAAAAAAAD2/w0AAAAAAAAAAAD3/wsAAAAAAAAAAAD3/wwAAAAAAAAAAAD3/w0AAAAAAAAAAAD4/wsAAAAAAAAAAAD4/wwAAAAAAAAAAAD4/w0AAAAAAAAAAAD5/wwAAAAAAAAAAAD5/w0AAAAAAAAAAAD6/wwAAAAAAAAAAAD6/w0AAAAAAAAAAAD7/wwAAAAAAAAAAAD7/w0AAAAAAAAAAAD8/wwAAAAAAAAAAAD8/w0AAAAAAAAAAAD9/wwAAAAAAAAAAAD9/w0AAAAAAAAAAAD+/wwAAAAAAAAAAAD+/w0AAAAAAAAAAAD//wwAAAAAAAAAAAD//w0AAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAABAAwAAAAAAAAAAAABAA0AAAAAAAAAAAACAAwAAAAAAAAAAAACAA0AAAAAAAAAAAADAAwAAAAAAAAAAAADAA0AAAAAAAAAAAAEAAwAAAAAAAAAAAAEAA0AAAAAAAAAAAAFAAwAAAAAAAAAAAAFAA0AAAAAAAAAAAAGAAwAAAAAAAAAAAAGAA0AAAAAAAAAAAAHAAwAAAAAAAAAAAAHAA0AAAAAAAAAAAAIAAwAAAAAAAAAAAAIAA0AAAAAAAAAAAAJAAwAAAAAAAAAAAAJAA0AAAAAAAAAAAAHAPP/AAAAAAAAAAAHAPT/AAAAAAAAAAAHAPX/AAAAAAAAAAAHAPb/AAAAAAAAAAAHAPf/AAAAAAAAAAAHAPj/AAAAAAAAAAAHAPn/AAAAAAAAAAAHAPr/AAAAAAAAAAAHAPv/AAAAAAAAAAAHAPz/AAAAAAAAAAAHAP3/AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP//AAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAAAAAAAAAAIAPP/AAAAAAAAAAAIAPT/AAAAAAAAAAAIAPX/AAAAAAAAAAAIAPb/AAAAAAAAAAAIAPf/AAAAAAAAAAAIAPj/AAAAAAAAAAAIAPn/AAAAAAAAAAAIAPr/AAAAAAAAAAAIAPv/AAAAAAAAAAAIAPz/AAAAAAAAAAAIAP3/AAAAAAAAAAAIAP7/AAAAAAAAAAAIAP//AAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAAJAPP/AAAAAAAAAAAJAPT/AAAAAAAAAAAJAPX/AAAAAAAAAAAJAPb/AAAAAAAAAAAJAPf/AAAAAAAAAAAJAPj/AAAAAAAAAAAJAPn/AAAAAAAAAAAJAPr/AAAAAAAAAAAJAPv/AAAAAAAAAAAJAPz/AAAAAAAAAAAJAP3/AAAAAAAAAAAJAP7/AAAAAAAAAAAJAP//AAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAD5//P/AAAAAAAAAAD6//P/AAAAAAAAAAD7//P/AAAAAAAAAAD8//P/AAAAAAAAAAD9//P/AAAAAAAAAAD+//P/AAAAAAAAAAD///P/AAAAAAAAAAAAAPP/AAAAAAAAAAABAPP/AAAAAAAAAAACAPP/AAAAAAAAAAADAPP/AAAAAAAAAAAEAPP/AAAAAAAAAAAFAPP/AAAAAAAAAAAGAPP/AAAAAAAAAAA=")
tile_set = ExtResource("1_2lugi")

[node name="Greenery texture" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAD9/wIAAAABAAAAAAD+/wIAAAABAAAAAAD9/wEAAAABAAAAAAD+/wEAAAACAAAAAAD//wIAAAAEAAAAAAD8/wAAAAABAAAAAAACAAAAAAADAAAAAAACAP//AAABAAAAAAACAP7/AAABAAAAAAACAP3/AAABAAAAAAABAP7/AAABAAAAAAAAAP3/AAABAAAAAAD+//f/AAABAAAAAAD+//j/AAABAAAAAAD///j/AAABAAAAAAD///f/AAABAAAAAAD///b/AAACAAAAAAAAAPb/AAACAAAAAAAAAPf/AAACAAAAAAD9/wAAAAAEAAAAAAD+/wAAAAACAAAAAAD9/wcAAAADAAAAAAD9/wYAAAACAAAAAAD+/wYAAAACAAAAAAADAAMAAAADAAAAAAAEAAMAAAADAAAAAAAEAAIAAAADAAAAAAABAP3/AAADAAAAAAABAPz/AAADAAAAAAAFAPf/AAADAAAAAAAFAPb/AAADAAAAAAAEAPf/AAADAAAAAAD6/wsAAAAAAAEAAAD6/woAAAABAAAAAAD6/wkAAAADAAAAAAD5/wkAAAADAAAAAAD5/woAAAADAAAAAAAEAAsAAAADAAAAAAAEAAoAAAADAAAAAAAEAAkAAAAEAAAAAAAFAAkAAAADAAAAAAAFAAgAAAADAAAAAAADAAkAAAACAAAAAAAEAAgAAAACAAAAAAD//wEAAAABAAAAAAD9////AAABAAAAAAD5//7/AAAFAAAAAAD5//3/AAAFAAAAAAD6//3/AAACAAAAAAD6//z/AAADAAAAAAD8//X/AAABAAAAAAD7/woAAAAGAAAAAAD7/wsAAAAGAAEAAAD7/wkAAAAAAAEAAAD7/wgAAAABAAEAAAD6/wgAAAABAAEAAAD5/wgAAAABAAEAAAD5/wsAAAAAAAEAAAD9/wgAAAAAAAEAAAAEAAQAAAAAAAEAAAADAAQAAAAAAAEAAAD//wMAAAAAAAEAAAD+/wMAAAAAAAEAAAD///n/AAAAAAEAAAD+//n/AAAAAAEAAAAFAPj/AAAFAAEAAAAEAPj/AAAFAAAAAAD8//b/AAAGAAEAAAAAAPj/AAAAAAIAAAD6//7/AAAFAAEAAAAFAAoAAAACAAAAAAAFAAsAAAAFAAEAAAD//wYAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAEAAAAEAAEAAAAFAAMAAAAGAAAAAAAFAAIAAAAGAAAAAAADAP3/AAAGAAAAAAADAP7/AAAGAAAAAAADAP//AAAGAAAAAAADAAAAAAAGAAAAAAAGAPb/AAAGAAAAAAAGAPf/AAAGAAAAAAABAPb/AAAGAAEAAAABAPf/AAAGAAAAAAD9//X/AAAGAAAAAAD7//3/AAAGAAAAAAD7//z/AAAGAAAAAAD6//v/AAABAAEAAAAAAPX/AAABAAEAAAD///X/AAABAAEAAAAFAPX/AAABAAEAAAAEAAEAAAADAAAAAAD+/wUAAAABAAEAAAD9/wUAAAABAAEAAAAFAAcAAAABAAEAAAAEAAcAAAABAAEAAAADAAgAAAADAAEAAAADAAIAAAADAAEAAAAAAPz/AAADAAEAAAD5//z/AAAFAAAAAAD9//7/AAABAAEAAAD+////AAAEAAEAAAD//wAAAAAEAAEAAAD///3/AAAFAAAAAAACAPz/AAAEAAEAAAABAP//AAADAAEAAAAAAP7/AAADAAEAAAABAAAAAAAFAAAAAAACAAMAAAAFAAAAAAD9//f/AAAFAAAAAAD9//j/AAAFAAAAAAADAPf/AAAFAAAAAAAEAPb/AAAEAAEAAAD+//b/AAABAAEAAAD7//X/AAABAAAAAAD8/wYAAAAFAAAAAAD8/wcAAAAFAAAAAAADAAsAAAAFAAAAAAADAAoAAAACAAEAAAAGAAkAAAAGAAAAAAAGAAgAAAAGAAAAAAD+/wcAAAAAAAIAAAD8//T/AAABAAEAAAD7//T/AAABAAEAAAAGAPj/AAAGAAEAAAADAPb/AAAFAAAAAAD8////AAADAAEAAAAGAAoAAAAGAAAAAAACAAkAAAAFAAAAAAAFAAEAAAAGAAAAAAADAAEAAAAFAAAAAAAEAAAAAAABAAEAAAD6//X/AAAFAAAAAAA=")
tile_set = ExtResource("1_2lugi")

[node name="Borders" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAD9/wEAAAACAAQAAAD9/wIAAAACAAQAAAD8/wAAAAAFAAQAAAD7/wAAAAAFAAQAAAD6/wEAAAADAAQAAAD6/wIAAAADAAQAAAABAAEAAAADAAQAAAABAAIAAAADAAQAAAAEAAEAAAACAAQAAAAEAAIAAAACAAQAAAD7/wMAAAAEAAQAAAD8/wMAAAAEAAQAAAADAAMAAAAEAAQAAAACAAMAAAAEAAQAAAABAAMAAAAGAAUAAAD6/wMAAAAGAAUAAAD9/wAAAAAEAAUAAAAEAAAAAAAEAAUAAAADAAAAAAAFAAQAAAACAAAAAAAFAAQAAAABAAAAAAAFAAUAAAD6/wAAAAAFAAUAAAD9/wMAAAADAAUAAAAEAAMAAAADAAUAAAA=")
tile_set = ExtResource("1_2lugi")

[node name="Grass" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAADAAUAAAADAAMAAAAAAAIAAAADAAMAAAD8/wkAAAADAAMAAAACAPr/AAADAAMAAAAGAAgAAAAEAAMAAAADAAcAAAACAAMAAAAEAAUAAAACAAMAAAAAAPv/AAACAAMAAAAEAPj/AAACAAMAAAD9//3/AAACAAMAAAD//wsAAAACAAMAAAD+/wwAAAAAAAMAAAD+/wYAAAAAAAMAAAD//wcAAAAAAAMAAAD8/wgAAAAAAAMAAAD6/wAAAAAAAAMAAAAGAP//AAAAAAMAAAABAPf/AAAAAAMAAAD9//b/AAAAAAMAAAA=")
tile_set = ExtResource("1_2lugi")

[node name="Soil" parent="TileMap" instance=ExtResource("2_uejqp")]
tile_map_data = PackedByteArray("AAD+//j/AAABAAIAAAABAPj/AAABAAIAAAD9/wkAAAAAAAIAAAD7/wEAAAAAAAAAAAD8/wEAAAAAAAAAAAD7/wIAAAAAAAAAAAD8/wIAAAAAAAAAAAACAAEAAAAAAAAAAAADAAEAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAA=")

[node name="Decorations" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAD5//X/AAAAAAcAAAD6//X/AAADAAYAAAD7//X/AAADAAYAAAD8//X/AAADAAYAAAD9//X/AAADAAYAAAD+//X/AAADAAYAAAD///X/AAADAAYAAAAAAPX/AAADAAYAAAABAPX/AAADAAYAAAACAPX/AAADAAYAAAADAPX/AAADAAYAAAAEAPX/AAADAAYAAAAFAPX/AAADAAYAAAAGAPX/AAAEAAYAAAAGAPb/AAAFAAYAAAAGAPf/AAAFAAYAAAAGAPj/AAAFAAYAAAAGAPn/AAAFAAYAAAAGAPr/AAAFAAYAAAAGAPv/AAAFAAYAAAAGAPz/AAAFAAYAAAAGAP3/AAAFAAYAAAAGAP7/AAAFAAYAAAAGAP//AAAFAAYAAAAGAAAAAAAFAAYAAAAGAAEAAAAFAAYAAAAGAAIAAAAFAAYAAAAGAAMAAAAFAAYAAAAGAAQAAAAFAAYAAAD5//b/AAABAAcAAAD5//f/AAABAAcAAAD5//j/AAABAAcAAAD5//n/AAABAAcAAAD5//r/AAABAAcAAAD5//v/AAABAAcAAAD5//z/AAABAAcAAAD5//3/AAABAAcAAAD5//7/AAABAAcAAAD5////AAABAAcAAAD5/wAAAAABAAcAAAD5/wEAAAABAAcAAAD5/wIAAAABAAcAAAD5/wMAAAABAAcAAAD5/wQAAAABAAcAAAAGAAUAAAAFAAYAAAAGAAYAAAAFAAYAAAAGAAcAAAAFAAYAAAAGAAgAAAAFAAYAAAAGAAkAAAAFAAYAAAAGAAoAAAAGAAYAAAD5/woAAAACAAcAAAD6/woAAAADAAYAAAD7/woAAAADAAYAAAD8/woAAAADAAYAAAD9/woAAAADAAYAAAD+/woAAAADAAYAAAD//woAAAADAAYAAAAAAAoAAAADAAYAAAABAAoAAAADAAYAAAACAAoAAAADAAYAAAADAAoAAAADAAYAAAAEAAoAAAADAAYAAAAFAAoAAAADAAYAAAD5/wUAAAABAAcAAAD5/wYAAAABAAcAAAD5/wcAAAABAAcAAAD5/wgAAAABAAcAAAD5/wkAAAABAAcAAAD7/wMAAAAFAAMAAAD7/wIAAAAEAAMAAAAFAAEAAAAFAAMAAAAFAAAAAAAEAAMAAAD+//j/AAABAAYAAAABAPj/AAAAAAYAAAA=")
tile_set = ExtResource("1_2lugi")

[node name="Indicator" type="TileMapLayer" parent="TileMap"]
tile_set = SubResource("TileSet_3oegt")
script = ExtResource("4_4b4ui")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.2, 2.2)
script = ExtResource("6_5sxdg")

[node name="Player" parent="." instance=ExtResource("3_wnjs3")]

[node name="PickupTruck" type="Sprite2D" parent="."]
position = Vector2(-77, 145)
texture = ExtResource("12_4o0jh")

[node name="Label" type="Label" parent="PickupTruck"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -33.0
offset_right = 25.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_sw4d4")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "0 PLANTS = 0 COINS"
horizontal_alignment = 1
script = ExtResource("10_hgf3a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PickupTruck/Label"]
libraries = {
"": SubResource("AnimationLibrary_kbbtx")
}
autoplay = "default"

[node name="CreaturesDirector" parent="." instance=ExtResource("4_644cu")]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Coin Counter" type="HBoxContainer" parent="HUD"]
offset_left = 11.0
offset_top = 18.0
offset_right = 176.0
offset_bottom = 74.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.59
theme = ExtResource("9_sw4d4")

[node name="Coin" type="TextureRect" parent="HUD/Coin Counter"]
layout_mode = 2
texture = ExtResource("8_wjfc8")
expand_mode = 2

[node name="CoinCounter" type="Label" parent="HUD/Coin Counter"]
layout_mode = 2
theme = ExtResource("9_sw4d4")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 48
text = "000"
vertical_alignment = 1
script = ExtResource("10_qflsh")

[node name="TimeCounter" type="Label" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("9_sw4d4")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 64
text = "00"
horizontal_alignment = 1
script = ExtResource("13_sfrhc")

[node name="Game End" type="CanvasLayer" parent="."]
visible = false

[node name="Node2D" type="Node2D" parent="Game End"]
position = Vector2(0, 800)

[node name="TileMapLayer" type="TileMapLayer" parent="Game End/Node2D"]
position = Vector2(-871, -698)
scale = Vector2(3.63, 3.63)
tile_map_data = PackedByteArray("AAARAA4AAAAFAAEAAAARAA8AAAAFAAEAAAARABAAAAAFAAEAAAARABEAAAAFAAEAAAARABIAAAAFAAEAAAARABMAAAAFAAEAAAARABQAAAAFAAEAAAARABUAAAAFAAEAAAARABYAAAAFAAEAAAASAA4AAAAFAAEAAAASAA8AAAAFAAEAAAASABAAAAAFAAEAAAASABEAAAAFAAEAAAASABIAAAAFAAEAAAASABMAAAAFAAEAAAASABQAAAAFAAEAAAASABYAAAAFAAEAAAATAA4AAAAFAAEAAAATAA8AAAAFAAEAAAATABAAAAAFAAEAAAATABEAAAAFAAEAAAATABIAAAAFAAEAAAATABMAAAAFAAEAAAATABQAAAAFAAEAAAATABUAAAAFAAEAAAATABYAAAAFAAEAAAAUAA4AAAAFAAEAAAAUAA8AAAAFAAEAAAAUABAAAAAFAAEAAAAUABEAAAAFAAEAAAAUABIAAAAFAAEAAAAUABMAAAAFAAEAAAAUABQAAAAFAAEAAAAUABUAAAAFAAEAAAAUABYAAAAFAAEAAAAVAA4AAAAFAAEAAAAVAA8AAAAFAAEAAAAVABAAAAAFAAEAAAAVABEAAAAFAAEAAAAVABIAAAAFAAEAAAAVABMAAAAFAAEAAAAVABQAAAAFAAEAAAAVABUAAAAFAAEAAAAVABYAAAAFAAEAAAAWAA4AAAAFAAEAAAAWAA8AAAAFAAEAAAAWABAAAAAFAAEAAAAWABEAAAAFAAEAAAAWABIAAAAFAAEAAAAWABMAAAAFAAEAAAAWABQAAAAFAAEAAAAWABUAAAAFAAEAAAAWABYAAAAFAAEAAAARAA0AAAAFAAAAAAASAA0AAAAFAAAAAAATAA0AAAAFAAAAAAAUAA0AAAAFAAAAAAAVAA0AAAAFAAAAAAAWAA0AAAAFAAAAAAARABcAAAAFAAIAAAASABcAAAAFAAIAAAATABcAAAAFAAIAAAAUABcAAAAFAAIAAAAVABcAAAAFAAIAAAAWABcAAAAFAAIAAAAXAA4AAAAGAAEAAAAXAA8AAAAGAAEAAAAXABAAAAAGAAEAAAAXABEAAAAGAAEAAAAXABIAAAAGAAEAAAAXABMAAAAGAAEAAAAXABQAAAAGAAEAAAAXABUAAAAGAAEAAAAXABYAAAAGAAEAAAAQAA4AAAAEAAEAAAAQAA8AAAAEAAEAAAAQABAAAAAEAAEAAAAQABEAAAAEAAEAAAAQABIAAAAEAAEAAAAQABMAAAAEAAEAAAAQABQAAAAEAAEAAAAQABUAAAAEAAEAAAAQABYAAAAEAAEAAAAQABcAAAAEAAIAAAAXABcAAAAGAAIAAAAXAA0AAAAGAAAAAAAQAA0AAAAEAAAAAAASABUAAAAFAAEAAAA=")
tile_set = SubResource("TileSet_33p5k")

[node name="GameOverUi" type="Sprite2D" parent="Game End/Node2D"]
position = Vector2(289, 175)
scale = Vector2(5, 5)
texture = ExtResource("16_6hcga")

[node name="VBoxContainer" type="VBoxContainer" parent="Game End/Node2D"]
custom_minimum_size = Vector2(0, 16)
offset_left = 114.0
offset_top = 286.0
offset_right = 294.0
offset_bottom = 390.0
theme = ExtResource("9_sw4d4")

[node name="Time Survived" type="HBoxContainer" parent="Game End/Node2D/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Game End/Node2D/VBoxContainer/Time Survived"]
layout_mode = 2
texture = SubResource("AtlasTexture_re6um")
expand_mode = 2
stretch_mode = 1

[node name="Label" type="Label" parent="Game End/Node2D/VBoxContainer/Time Survived"]
layout_mode = 2
text = "TIME SURVIVED: "

[node name="Crops Collected" type="HBoxContainer" parent="Game End/Node2D/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Game End/Node2D/VBoxContainer/Crops Collected"]
layout_mode = 2
texture = ExtResource("18_bg3bw")
expand_mode = 2
stretch_mode = 1

[node name="Label" type="Label" parent="Game End/Node2D/VBoxContainer/Crops Collected"]
layout_mode = 2
text = "CROPS COLLECTED: "

[node name="Coins Earned" type="HBoxContainer" parent="Game End/Node2D/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Game End/Node2D/VBoxContainer/Coins Earned"]
layout_mode = 2
texture = ExtResource("8_wjfc8")
expand_mode = 2
stretch_mode = 1

[node name="Label" type="Label" parent="Game End/Node2D/VBoxContainer/Coins Earned"]
layout_mode = 2
text = "COINS EARNED: "

[node name="Critters Kicked" type="HBoxContainer" parent="Game End/Node2D/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Game End/Node2D/VBoxContainer/Critters Kicked"]
layout_mode = 2
texture = ExtResource("19_tw03e")
expand_mode = 2
stretch_mode = 1

[node name="Label" type="Label" parent="Game End/Node2D/VBoxContainer/Critters Kicked"]
layout_mode = 2
text = "CRITTERS KICKED: "

[node name="Retry" type="Button" parent="Game End/Node2D"]
offset_left = 171.0
offset_top = 529.0
offset_right = 406.0
offset_bottom = 588.0
theme = ExtResource("9_sw4d4")
theme_override_font_sizes/font_size = 36
text = "RETRY"

[node name="Music" type="Node" parent="."]

[node name="SlowBG" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("20_phf5y")
autoplay = true
bus = &"Music"

[node name="GameOver" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("21_jlg7n")
bus = &"Music"

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_atbnk")
autoplay = true
bus = &"Ambience"

[node name="MarketStall" type="Sprite2D" parent="."]
position = Vector2(0, -142)
texture = ExtResource("17_eeec2")

[connection signal="pressed" from="Game End/Node2D/Retry" to="." method="_on_retry_pressed"]
